_generated-doc/3.0/config/quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration.adoc

:summaryTableId: quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_configuration]]link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.enabled]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.enabled[quarkus.redis.devservices.enabled]`

[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. 
When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode and when Docker is running.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.image-name]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.image-name[quarkus.redis.devservices.image-name]`

[.description]
--
The container image name to use, for container based DevServices providers. If you want to use Redis Stack modules (bloom, graph, search...), use: `redis/redis-stack-server:latest`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.port]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.port[quarkus.redis.devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.shared]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.shared[quarkus.redis.devservices.shared]`

[.description]
--
Indicates if the Redis server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Redis starts a new container. 
The discovery uses the `quarkus-dev-service-redis` label. The value is configured using the `service-name` property. 
Container sharing is only used in dev mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_DEVSERVICES_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_DEVSERVICES_SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.service-name]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.devservices.service-name[quarkus.redis.devservices.service-name]`

[.description]
--
The value of the `quarkus-dev-service-redis` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Redis looks for a container with the `quarkus-dev-service-redis` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise, it starts a new container with the `quarkus-dev-service-redis` label set to the specified value. 
This property is used when you need multiple shared Redis servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_DEVSERVICES_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_DEVSERVICES_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`redis`


a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.enabled]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.enabled[quarkus.redis."additional-redis-clients".devservices.enabled]`

[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. 
When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode and when Docker is running.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.image-name]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.image-name[quarkus.redis."additional-redis-clients".devservices.image-name]`

[.description]
--
The container image name to use, for container based DevServices providers. If you want to use Redis Stack modules (bloom, graph, search...), use: `redis/redis-stack-server:latest`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.port]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.port[quarkus.redis."additional-redis-clients".devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.shared]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.shared[quarkus.redis."additional-redis-clients".devservices.shared]`

[.description]
--
Indicates if the Redis server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Redis starts a new container. 
The discovery uses the `quarkus-dev-service-redis` label. The value is configured using the `service-name` property. 
Container sharing is only used in dev mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.service-name]]`link:#quarkus-redis-client-config-group-redis-build-time-config-dev-service-configuration_quarkus.redis.-additional-redis-clients-.devservices.service-name[quarkus.redis."additional-redis-clients".devservices.service-name]`

[.description]
--
The value of the `quarkus-dev-service-redis` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Redis looks for a container with the `quarkus-dev-service-redis` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise, it starts a new container with the `quarkus-dev-service-redis` label set to the specified value. 
This property is used when you need multiple shared Redis servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__ADDITIONAL_REDIS_CLIENTS__DEVSERVICES_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`redis`

|===